feat: Real HackerOne API integration with source citations - Added direct HackerOne API integration for real vulnerability data - Implemented source citation with clickable links in responses - Fixed metadata extraction for proper Qdrant storage - Updated README with new architecture and features - Added security keyword detection in Router for better query routing

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ Thumbs.db
 
 # Testing
 .pytest_cache/
+
+# Debug & Test Scripts (development only)
+debug_*.py
+test_*.py
+quick_debug.py
+reproduce_success.py
+verify_production_api.py
+show_real_data.py
+real_data_output.txt
+
