--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 GOOGLE_API_KEY=your_gemini_api_key_here
 TELEGRAM_BOT_TOKEN=your_telegram_token
 DISCORD_BOT_TOKEN=your_discord_token
+HACKERONE_API_IDENTIFIER=your_h1_username
+HACKERONE_API_TOKEN=your_h1_api_token
